Bug 171905 - [PATCH] Flag "completed" in tasks not synched with groupdav server
Summary: [PATCH] Flag "completed" in tasks not synched with groupdav server
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.1
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-30 14:41 UTC by Roland Wolters
Modified: 2011-07-30 20:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example of a vcard example delieverd by the server. (258 bytes, text/plain)
2008-09-30 14:44 UTC, Roland Wolters
Details
Patch to add/remove COMPLETED flag depending on the completion percentage value. (1.75 KB, patch)
2008-11-17 15:23 UTC, Roland Wolters
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Wolters 2008-09-30 14:41:52 UTC
Version:            (using KDE 4.1.1)
Installed from:    Ubuntu Packages

Setup:
I have set up a Citadel groupware server and access it via groupdav from within Kontact (3.5.9 on Debian as well as 4.1.1 on Kubuntu). Exchanging, modifying and deleting addresses, calendar data and tasks works.

Problem:
In my test setup I wanted to flag tasks as "completed" and tried to synch this flag. This didn't work neither from Kontact to Citadel nor from Citadel to Kontact.

How to reproduce:
Create a task within Citadel/Kontact. Sync it. Afterwards, flag that Task in Citadel/Kontact as "completed", and sync again. Check that the "completed" flag was not synced.

Expected result:
The task should be flagged "completed" on the sync aim as well afterwards.
Comment 1 Roland Wolters 2008-09-30 14:44:15 UTC
Created attachment 27620 [details]
Example of a vcard example delieverd by the server.

The attachment shows the vcard delivered by the groupdav server. Note that the "completed" flag is clearly set, but that the VERSION is set to 2.0 while KMail exports data with the version 1.0.
Comment 2 Roland Wolters 2008-11-17 15:23:32 UTC
Created attachment 28627 [details]
Patch to add/remove COMPLETED flag depending on the completion percentage value.

The problem is that Kontact does not save the COMPLETED flga, but saves the percentage value - 100% equals completed in this case.

The attached patch fixes this and adds/removes the COMPLETED flag whether the status is at 100% or not.

The patch is written against KDE 3.5, but hopefully it can be use for the KDE 4.x development as well.

Thanks for Marco Nelles from credativ GmbH for this patch.
Comment 3 Sergio Martins 2011-02-13 21:03:38 UTC
Can you still reproduce in KDE4 ?

Please use http://git.reviewboard.kde.org to submit patches.
Comment 4 Sergio Martins 2011-07-07 22:24:28 UTC
Gregory, can you see if this patch makes sense, or if your resource has the same problem ?
Comment 5 Grégory Oestreicher 2011-07-27 20:16:03 UTC
Hi,

Yes, the issue is still present with 4.6.1, tested with the dav resource. As such this patch (after adapting it for KCalCore) should make sense, though I'm not sure why the status is removed when the percentage is not 100%.

Cheers,
Grégory
Comment 6 Grégory Oestreicher 2011-07-30 20:08:41 UTC
Git commit 1a0c7f205aa2f05233ffc5c4d1ea54c03d9a2741 by Gregory Oestreicher.
Committed on 30/07/2011 at 22:07.
Pushed by goestreicher into branch 'master'.

Correctly set the completed flag for todo

BUG: 171905
REVIEW: 102121

M  +8    -0    kcalcore/icalformat_p.cpp

http://commits.kde.org/kdepimlibs/1a0c7f205aa2f05233ffc5c4d1ea54c03d9a2741