Correctly set the completed flag for todo

BUG: 171905
REVIEW: 102121